# blueberry

./: Makefile  README.md  blueberry.pot  generate_desktop_files  makepot  meson.build  test
debian/: changelog  control  copyright
etc/xdg/autostart/: blueberry-obex-agent.desktop  blueberry-tray.desktop
po/: LINGUAS  POTFILES  am.po  ar.po  blueberry-af.po  blueberry-am.po  blueberry-ar.po  blueberry-as.po  blueberry-az.po  blueberry-be.po  blueberry-ber.po  blueberry-bg.po  blueberry-bn.po  blueberry-br.po  blueberry-bs.po  blueberry-ca.po  blueberry-ca@valencia.po  blueberry-ckb.po  blueberry-crh.po  blueberry-cs.po  blueberry-cy.po  blueberry-da.po  blueberry-de.po  blueberry-el.po  blueberry-en_AU.po  blueberry-en_CA.po  blueberry-en_GB.po  blueberry-eo.po  blueberry-es.po  blueberry-et.po  blueberry-eu.po  blueberry-fa.po  blueberry-fi.po  blueberry-fil.po  blueberry-fr.po  blueberry-fr_CA.po  blueberry-frp.po  blueberry-fy.po  blueberry-gd.po  blueberry-gl.po  (+112 more)
usr/lib/blueberry/: BlueberrySettingsWidgets.py  blueberry-obex-agent.py  blueberry-tray.py  blueberry.py  blueberry.ui  blueberrySettings.py  btadapter.py  rfkillMagic.py  safechild
usr/share/applications/: blueberry.desktop
usr/share/cinnamon/applets/blueberry@cinnamon.org/: applet.js  metadata.json
usr/share/glib-2.0/schemas/: org.blueberry.gschema.xml
